examples/invalid/type-mismatch.por
algoritmo "type_mismatch"

var
    a: inteiro

inicio
    a <- 2.5
fimalgoritmo
